--- a/vpnLib/build.gradle
+++ b/vpnLib/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'com.android.library'
-group = 'com.github.nizwar'
+plugins {
+    id 'maven-publish'
+    id 'com.android.library'
+}
+
+//group = 'com.github.nizwar'
 
 android {
     compileSdk 33
@@ -24,6 +28,22 @@ android {
     }
 }
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.technonicol'
+                artifactId = 'ovpn'
+                version = '1.0.0'
+            }
+        }
+        repositories {
+            mavenLocal()
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
@@ -31,4 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.70' // For PKCS#7/CMS
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.70' // Core crypto
 }
